# monodevelop

extras/BooBinding/: configure
extras/GeckoWebBrowser/: configure
extras/MonoDevelop.AddinAuthoring/: configure
extras/PyBinding/: configure
main/: configure.in
main/src/addins/CBinding/: CBinding.addin.xml  CBinding.csproj  CppCompilerConfiguration.cs  CppLanguageBinding.cs
main/src/addins/CBinding/MSBuild/: CppCompilerConfiguration.cs  CppProject.cs  CppProjectBinding.cs  CppProjectConfiguration.cs  CppProjectNodeExtension.cs
main/src/addins/MonoDevelop.Debugger/: MonoDevelop.Debugger.addin.xml  MonoDevelop.Debugger.csproj
main/src/addins/MonoDevelop.Debugger/MonoDevelop.Debugger.Visualizer/: ArrayListVisualizer.cs  ColorVisualizer.cs  DataRowVisualizer.cs  DataTableVisualizer.cs  DictionaryVisualizer.cs  ExceptionVisualizer.cs  GdkColorVisualizer.cs  ImageVisualizer.cs  LinqXmlVisualizer.cs  ListIntVisualizer.cs  ListVisualizer.cs  XElementVisualizer.cs  XmlDocumentVisualizer.cs
main/src/addins/MonoDevelop.GtkCore2/: Makefile.am  MonoDevelop.GtkCore2.addin.xml  MonoDevelop.GtkCore2.csproj  MonoDevelop.GtkCore2.dll.config  MonoDevelop.GtkCore2.sln  MonoDevelop.GtkCore2.xbuild.csproj  addin-project.xml
main/src/addins/MonoDevelop.GtkCore2/MonoDevelop.GtkCore/: GtkCoreService.cs  GtkDesignInfo.cs  WidgetFileDescriptionTemplate.cs  WidgetParser.cs
main/src/addins/MonoDevelop.GtkCore2/MonoDevelop.GtkCore.Dialogs/: ProjectConversionDialog.cs
main/src/addins/MonoDevelop.GtkCore2/MonoDevelop.GtkCore.GuiBuilder/: ActionGroupDisplayBinding.cs  ActionGroupView.cs  CodeBinder.cs  GtkProjectServiceExtension.cs  GuiBuilderDisplayBinding.cs  GuiBuilderProject.cs  GuiBuilderService.cs  GuiBuilderView.cs
main/src/addins/MonoDevelop.GtkCore2/MonoDevelop.GtkCore.NodeBuilders/: ProjectFileNodeBuilderExtension.cs  ProjectNodeBuilder.cs
main/src/addins/MonoDevelop.GtkCore2/Stetic/: ApplicationBackend.cs  CairoUtil.cs  CecilClassDescriptor.cs  CodeGeneratorPartialClass.cs  Glade.cs  ObjectWrapper.cs  ParamSpec.cs  ProjectBackend.cs  Shadow.cs  WidgetActionBar.cs  WidgetDesignerBackend.cs  WidgetEditSession.cs
main/src/addins/MonoDevelop.GtkCore2/Stetic/Wrapper/: Alignment.cs  Container.cs  Misc.cs  SignalEventHandler.cs  Widget.cs  objects.xml
main/src/addins/MonoDevelop.GtkCore2/gtk-gui/: MonoDevelop.GtkCore.Dialogs.GtkDesignerOptionsPanelWidget.cs  MonoDevelop.GtkCore.Dialogs.ProjectConversionDialog.cs  gui.stetic
main/src/addins/MonoDevelop.GtkCore2/libstetic/: Makefile.am  libstetic2.csproj
main/src/addins/MonoDevelop.GtkCore2/libsteticui/: Makefile.am  libsteticui2.csproj
main/src/core/MonoDevelop.Core/MonoDevelop.Projects/: Project.cs  ProjectBuildConfiguration.cs  ProjectFile.cs  ProjectFilterItem.cs
main/src/core/MonoDevelop.Core/MonoDevelop.Projects.Formats.MSBuild/: MSBuildItemGroupCollection.cs  MSBuildProject.cs  MSBuildProjectFilter.cs  MSBuildProjectHandler.cs
