SUBDIRS = libstetic libsteticui

ADDIN_BUILD = $(top_builddir)/build/AddIns/MonoDevelop.GtkCore2
ASSEMBLY = $(ADDIN_BUILD)/MonoDevelop.GtkCore2.dll

DEPS =  \
	$(top_builddir)/build/AddIns/MonoDevelop.Deployment/MonoDevelop.Deployment.dll \
	$(top_builddir)/build/AddIns/MonoDevelop.DesignerSupport/MonoDevelop.DesignerSupport.dll \
	$(top_builddir)/build/bin/Mono.Cecil.dll \
	$(top_builddir)/build/bin/Mono.Debugging.dll \
	$(top_builddir)/build/bin/Mono.TextEditor.dll \
	$(top_builddir)/build/bin/MonoDevelop.Core.dll \
	$(top_builddir)/build/bin/MonoDevelop.Ide.dll \
	$(top_builddir)/build/bin/NRefactory.dll

REFS =  \
	$(GLADE_SHARP_LIBS) \
	$(GLIB_SHARP_LIBS) \
	$(GTK_SHARP_LIBS) \
	$(MONO_ADDINS_LIBS) \
	-r:Mono.Cairo \
	-r:Mono.Posix \
	-r:System \
	-r:System.Core \
	-r:System.Runtime.Remoting \
	-r:System.Xml

FILES =  \
	AssemblyInfo.cs \
	gtk-gui/generated.cs \
	gtk-gui/MonoDevelop.GtkCore.Dialogs.GtkDesignerOptionsPanelWidget.cs \
	gtk-gui/MonoDevelop.GtkCore.Dialogs.ProjectConversionDialog.cs \
	MonoDevelop.GtkCore.Commands/GtkCommands.cs \
	MonoDevelop.GtkCore.Dialogs/BindDesignDialog.cs \
	MonoDevelop.GtkCore.Dialogs/ConfirmWindowDeleteDialog.cs \
	MonoDevelop.GtkCore.Dialogs/GtkDesignerOptionsPanelWidget.cs \
	MonoDevelop.GtkCore.Dialogs/GtkFeatureWidget.cs \
	MonoDevelop.GtkCore.Dialogs/ProjectConversionDialog.cs \
	MonoDevelop.GtkCore.Dialogs/SelectRenamedClassDialog.cs \
	MonoDevelop.GtkCore.Dialogs/WidgetBuilderOptionPanel.cs \
	MonoDevelop.GtkCore.GuiBuilder/ActionGroupDisplayBinding.cs \
	MonoDevelop.GtkCore.GuiBuilder/ActionGroupView.cs \
	MonoDevelop.GtkCore.GuiBuilder/ClassUtils.cs \
	MonoDevelop.GtkCore.GuiBuilder/CodeBinder.cs \
	MonoDevelop.GtkCore.GuiBuilder/CombinedDesignView.cs \
	MonoDevelop.GtkCore.GuiBuilder/GtkProjectServiceExtension.cs \
	MonoDevelop.GtkCore.GuiBuilder/GuiBuilderDisplayBinding.cs \
	MonoDevelop.GtkCore.GuiBuilder/GuiBuilderDocumentOutline.cs \
	MonoDevelop.GtkCore.GuiBuilder/GuiBuilderProject.cs \
	MonoDevelop.GtkCore.GuiBuilder/GuiBuilderService.cs \
	MonoDevelop.GtkCore.GuiBuilder/GuiBuilderView.cs \
	MonoDevelop.GtkCore.GuiBuilder/GuiBuilderWindow.cs \
	MonoDevelop.GtkCore.GuiBuilder/PropertiesWidget.cs \
	MonoDevelop.GtkCore.GuiBuilder/ToolboxLoader.cs \
	MonoDevelop.GtkCore.GuiBuilder/ToolboxProvider.cs \
	MonoDevelop.GtkCore.NodeBuilders/GuiProjectFolder.cs \
	MonoDevelop.GtkCore.NodeBuilders/GuiProjectFolderNodeBuilder.cs \
	MonoDevelop.GtkCore.NodeBuilders/ProjectFileExtension.cs \
	MonoDevelop.GtkCore.NodeBuilders/ProjectFileNodeBuilderExtension.cs \
	MonoDevelop.GtkCore.NodeBuilders/ProjectFolderNodeBuilderExtension.cs \
	MonoDevelop.GtkCore.NodeBuilders/ProjectNodeBuilder.cs \
	MonoDevelop.GtkCore.NodeBuilders/StockIconsNodeBuilder.cs \
	MonoDevelop.GtkCore/Counters.cs \
	MonoDevelop.GtkCore/GtkCoreService.cs \
	MonoDevelop.GtkCore/GtkDesignInfo.cs \
	MonoDevelop.GtkCore/ObjectsDocument.cs \
	MonoDevelop.GtkCore/ProjectResourceProvider.cs \
	MonoDevelop.GtkCore/ReferenceManager.cs \
	MonoDevelop.GtkCore/WidgetFileDescriptionTemplate.cs \
	MonoDevelop.GtkCore/WidgetParser.cs \
	Stetic/ActionComponent.cs \
	Stetic/ActionGroupComponent.cs \
	Stetic/ActionGroupDesigner.cs \
	Stetic/ActionGroupDesignerBackend.cs \
	Stetic/ActionGroupEditSession.cs \
	Stetic/ActionGroupToolbar.cs \
	Stetic/Application.cs \
	Stetic/ApplicationBackend.cs \
	Stetic/ApplicationBackendController.cs \
	Stetic/AssemblyResolver.cs \
	Stetic/AssemblyWidgetLibrary.cs \
	Stetic/CairoUtil.cs \
	Stetic/CecilClassDescriptor.cs \
	Stetic/CecilPropertyDescriptor.cs \
	Stetic/CecilSignalDescriptor.cs \
	Stetic/CecilWidgetLibrary.cs \
	Stetic/ClassDescriptor.cs \
	Stetic/Clipboard.cs \
	Stetic/CodeGenerationResult.cs \
	Stetic/CodeGenerator.cs \
	Stetic/CodeGeneratorPartialClass.cs \
	Stetic/CommandDescriptor.cs \
	Stetic/Component.cs \
	Stetic/ComponentEventHandler.cs \
	Stetic/ComponentSignalEventHandler.cs \
	Stetic/ComponentType.cs \
	Stetic/ContainerUndoRedoManager.cs \
	Stetic/ContextMenu.cs \
	Stetic/CustomWidget.cs \
	Stetic/Designer.cs \
	Stetic/DND.cs \
	Stetic/Editor/Accelerator.cs \
	Stetic/Editor/ActionGroupEditor.cs \
	Stetic/Editor/ActionItem.cs \
	Stetic/Editor/ActionMenu.cs \
	Stetic/Editor/ActionMenuBar.cs \
	Stetic/Editor/ActionMenuItem.cs \
	Stetic/Editor/ActionToolbar.cs \
	Stetic/Editor/ActionToolItem.cs \
	Stetic/Editor/Boolean.cs \
	Stetic/Editor/CellRendererComboBox.cs \
	Stetic/Editor/Char.cs \
	Stetic/Editor/Color.cs \
	Stetic/Editor/DateTimeEditor.cs \
	Stetic/Editor/EditIconDialog.cs \
	Stetic/Editor/EditIconFactoryDialog.cs \
	Stetic/Editor/Enumeration.cs \
	Stetic/Editor/Flags.cs \
	Stetic/Editor/FlagsSelectorDialog.cs \
	Stetic/Editor/FloatRange.cs \
	Stetic/Editor/GroupPicker.cs \
	Stetic/Editor/IconList.cs \
	Stetic/Editor/IconSelectorItem.cs \
	Stetic/Editor/IconSelectorMenu.cs \
	Stetic/Editor/IconSelectorMenuItem.cs \
	Stetic/Editor/Identifier.cs \
	Stetic/Editor/Image.cs \
	Stetic/Editor/ImageFile.cs \
	Stetic/Editor/ImageSelector.cs \
	Stetic/Editor/IntRange.cs \
	Stetic/Editor/NonContainerWarningDialog.cs \
	Stetic/Editor/OptIntRange.cs \
	Stetic/Editor/ProjectIconList.cs \
	Stetic/Editor/ProjectIconSelectorItem.cs \
	Stetic/Editor/ResponseId.cs \
	Stetic/Editor/SelectIconDialog.cs \
	Stetic/Editor/SelectImageDialog.cs \
	Stetic/Editor/StockIconList.cs \
	Stetic/Editor/StockIconSelectorItem.cs \
	Stetic/Editor/StockItem.cs \
	Stetic/Editor/String.cs \
	Stetic/Editor/StringArray.cs \
	Stetic/Editor/Text.cs \
	Stetic/Editor/TextBox.cs \
	Stetic/Editor/TextEditor.cs \
	Stetic/Editor/TextEditorDialog.cs \
	Stetic/Editor/ThemedIcon.cs \
	Stetic/Editor/ThemedIconList.cs \
	Stetic/Editor/TimeSpanEditor.cs \
	Stetic/Editor/Translatable.cs \
	Stetic/Editor/TreeViewCellContainer.cs \
	Stetic/Editor/WidgetSelector.cs \
	Stetic/EnumDescriptor.cs \
	Stetic/ErrorWidget.cs \
	Stetic/GeneratorContext.cs \
	Stetic/Glade.cs \
	Stetic/GladeException.cs \
	Stetic/GladeUtils.cs \
	Stetic/Grid.cs \
	Stetic/GuiDispatchServerSink.cs \
	Stetic/GuiDispatchServerSinkProvider.cs \
	Stetic/IDesignArea.cs \
	Stetic/IEditableObject.cs \
	Stetic/ImageInfo.cs \
	Stetic/IProject.cs \
	Stetic/IProjectDesignInfo.cs \
	Stetic/IPropertyEditor.cs \
	Stetic/IRadioGroupManager.cs \
	Stetic/IResourceProvider.cs \
	Stetic/ItemDescriptor.cs \
	Stetic/ItemGroup.cs \
	Stetic/ItemGroupCollection.cs \
	Stetic/LibraryCache.cs \
	Stetic/Metacity/ButtonFunction.cs \
	Stetic/Metacity/ButtonLayout.cs \
	Stetic/Metacity/FrameFlags.cs \
	Stetic/Metacity/FrameType.cs \
	Stetic/Metacity/ObjectManager.cs \
	Stetic/Metacity/Preview.cs \
	Stetic/Metacity/Theme.cs \
	Stetic/NoGuiDispatchAttribute.cs \
	Stetic/ObjectReader.cs \
	Stetic/ObjectWrapper.cs \
	Stetic/ObjectWrapperEventHandler.cs \
	Stetic/ObjectWriter.cs \
	Stetic/Palette.cs \
	Stetic/PaletteBackend.cs \
	Stetic/ParamSpec.cs \
	Stetic/Placeholder.cs \
	Stetic/PluggableWidget.cs \
	Stetic/Project.cs \
	Stetic/ProjectBackend.cs \
	Stetic/ProjectIconFactory.cs \
	Stetic/ProjectViewBackend.cs \
	Stetic/PropertyDescriptor.cs \
	Stetic/PropertyEditor.cs \
	Stetic/PropertyEditorAttribute.cs \
	Stetic/PropertyEditorCell.cs \
	Stetic/PropertyGrid.cs \
	Stetic/PropertyTree.cs \
	Stetic/RadioGroupManager.cs \
	Stetic/Registry.cs \
	Stetic/Set.cs \
	Stetic/Shadow.cs \
	Stetic/SignalDescriptor.cs \
	Stetic/SignalsEditor.cs \
	Stetic/SignalsEditorBackend.cs \
	Stetic/TopLevelDialog.cs \
	Stetic/TopLevelWindow.cs \
	Stetic/TranslatableAttribute.cs \
	Stetic/TypedClassDescriptor.cs \
	Stetic/TypedPropertyDescriptor.cs \
	Stetic/TypedSignalDescriptor.cs \
	Stetic/Undo/ActionDiffAdaptor.cs \
	Stetic/Undo/DiffGenerator.cs \
	Stetic/Undo/IDiffAdaptor.cs \
	Stetic/Undo/UndoManager.cs \
	Stetic/Undo/XmlDiffAdaptor.cs \
	Stetic/UndoQueue.cs \
	Stetic/UserInterface.cs \
	Stetic/WidgetActionBar.cs \
	Stetic/WidgetComponent.cs \
	Stetic/WidgetDesigner.cs \
	Stetic/WidgetDesignerBackend.cs \
	Stetic/WidgetEditSession.cs \
	Stetic/WidgetFactory.cs \
	Stetic/WidgetInfoEventHandler.cs \
	Stetic/WidgetLibrary.cs \
	Stetic/WidgetPropertyTree.cs \
	Stetic/WidgetPropertyTreeBackend.cs \
	Stetic/WidgetTree.cs \
	Stetic/WidgetTreeCombo.cs \
	Stetic/WidgetUtils.cs \
	Stetic/Windows/Preview.cs \
	Stetic/Windows/WindowsTheme.cs \
	Stetic/Wrapper/AboutDialog.cs \
	Stetic/Wrapper/Action.cs \
	Stetic/Wrapper/ActionGroup.cs \
	Stetic/Wrapper/ActionToolbarWrapper.cs \
	Stetic/Wrapper/ActionTree.cs \
	Stetic/Wrapper/Alignment.cs \
	Stetic/Wrapper/Bin.cs \
	Stetic/Wrapper/Box.cs \
	Stetic/Wrapper/Button.cs \
	Stetic/Wrapper/ButtonBox.cs \
	Stetic/Wrapper/CheckButton.cs \
	Stetic/Wrapper/ColorButton.cs \
	Stetic/Wrapper/ComboBox.cs \
	Stetic/Wrapper/ComboBoxEntry.cs \
	Stetic/Wrapper/Container.cs \
	Stetic/Wrapper/Custom.cs \
	Stetic/Wrapper/Dialog.cs \
	Stetic/Wrapper/Entry.cs \
	Stetic/Wrapper/Expander.cs \
	Stetic/Wrapper/Fixed.cs \
	Stetic/Wrapper/FontButton.cs \
	Stetic/Wrapper/FontSelectionDialog.cs \
	Stetic/Wrapper/Frame.cs \
	Stetic/Wrapper/HScale.cs \
	Stetic/Wrapper/HScrollbar.cs \
	Stetic/Wrapper/IconView.cs \
	Stetic/Wrapper/Image.cs \
	Stetic/Wrapper/ImageMenuItem.cs \
	Stetic/Wrapper/Label.cs \
	Stetic/Wrapper/MenuBar.cs \
	Stetic/Wrapper/MenuItem.cs \
	Stetic/Wrapper/MessageDialog.cs \
	Stetic/Wrapper/Misc.cs \
	Stetic/Wrapper/Notebook.cs \
	Stetic/Wrapper/Object.cs \
	Stetic/Wrapper/OptionMenu.cs \
	Stetic/Wrapper/Paned.cs \
	Stetic/Wrapper/RadioActionGroupManager.cs \
	Stetic/Wrapper/RadioButton.cs \
	Stetic/Wrapper/RadioMenuItem.cs \
	Stetic/Wrapper/RadioToolButton.cs \
	Stetic/Wrapper/Range.cs \
	Stetic/Wrapper/Scale.cs \
	Stetic/Wrapper/ScrolledWindow.cs \
	Stetic/Wrapper/Signal.cs \
	Stetic/Wrapper/SignalChangedEventHandler.cs \
	Stetic/Wrapper/SignalCollection.cs \
	Stetic/Wrapper/SignalEventHandler.cs \
	Stetic/Wrapper/SpinButton.cs \
	Stetic/Wrapper/Table.cs \
	Stetic/Wrapper/TextView.cs \
	Stetic/Wrapper/ToggleToolButton.cs \
	Stetic/Wrapper/Toolbar.cs \
	Stetic/Wrapper/ToolButton.cs \
	Stetic/Wrapper/TreeView.cs \
	Stetic/Wrapper/Viewport.cs \
	Stetic/Wrapper/VScale.cs \
	Stetic/Wrapper/VScrollbar.cs \
	Stetic/Wrapper/Widget.cs \
	Stetic/Wrapper/WidgetEventHandler.cs \
	Stetic/Wrapper/WidgetNameChangedHandler.cs \
	Stetic/Wrapper/Window.cs

RES =  \
	gtk-gui/gui.stetic \
	gui.glade \
	icons/gtk-logo.png \
	icons/gtkx.png \
	icons/image-x-generic.png \
	MonoDevelop.GtkCore2.addin.xml,MonoDevelop.GtkCore.addin.xml \
	Stetic/action.png \
	Stetic/stetic.glade \
	Stetic/Wrapper/objects.xml \
	Stetic/Wrapper/pixmaps/accellabel.png \
	Stetic/Wrapper/pixmaps/actiongroup.png \
	Stetic/Wrapper/pixmaps/add-check-label.png \
	Stetic/Wrapper/pixmaps/add-menu.png \
	Stetic/Wrapper/pixmaps/alignment.png \
	Stetic/Wrapper/pixmaps/arrow.png \
	Stetic/Wrapper/pixmaps/box-expand.png \
	Stetic/Wrapper/pixmaps/box-fill.png \
	Stetic/Wrapper/pixmaps/button.png \
	Stetic/Wrapper/pixmaps/calendar.png \
	Stetic/Wrapper/pixmaps/cell-expand-h.png \
	Stetic/Wrapper/pixmaps/cell-expand-v.png \
	Stetic/Wrapper/pixmaps/cell-fill-h.png \
	Stetic/Wrapper/pixmaps/cell-fill-v.png \
	Stetic/Wrapper/pixmaps/checkbutton.png \
	Stetic/Wrapper/pixmaps/colorbutton.png \
	Stetic/Wrapper/pixmaps/colorselection.png \
	Stetic/Wrapper/pixmaps/colorselectiondialog.png \
	Stetic/Wrapper/pixmaps/combo.png \
	Stetic/Wrapper/pixmaps/comboentry.png \
	Stetic/Wrapper/pixmaps/custom.png \
	Stetic/Wrapper/pixmaps/dec-border.png \
	Stetic/Wrapper/pixmaps/dialog.png \
	Stetic/Wrapper/pixmaps/drawingarea.png \
	Stetic/Wrapper/pixmaps/entry.png \
	Stetic/Wrapper/pixmaps/eventbox.png \
	Stetic/Wrapper/pixmaps/expander.png \
	Stetic/Wrapper/pixmaps/fileselection.png \
	Stetic/Wrapper/pixmaps/fixed.png \
	Stetic/Wrapper/pixmaps/fontbutton.png \
	Stetic/Wrapper/pixmaps/fontselection.png \
	Stetic/Wrapper/pixmaps/fontselectiondialog.png \
	Stetic/Wrapper/pixmaps/frame.png \
	Stetic/Wrapper/pixmaps/globe.png \
	Stetic/Wrapper/pixmaps/globe-not.png \
	Stetic/Wrapper/pixmaps/handlebox.png \
	Stetic/Wrapper/pixmaps/hbox.png \
	Stetic/Wrapper/pixmaps/hbuttonbox.png \
	Stetic/Wrapper/pixmaps/hpaned.png \
	Stetic/Wrapper/pixmaps/hscale.png \
	Stetic/Wrapper/pixmaps/hscrollbar.png \
	Stetic/Wrapper/pixmaps/hseparator.png \
	Stetic/Wrapper/pixmaps/iconview.png \
	Stetic/Wrapper/pixmaps/image.png \
	Stetic/Wrapper/pixmaps/inc-border.png \
	Stetic/Wrapper/pixmaps/label.png \
	Stetic/Wrapper/pixmaps/menu.png \
	Stetic/Wrapper/pixmaps/menubar.png \
	Stetic/Wrapper/pixmaps/messagedialog.png \
	Stetic/Wrapper/pixmaps/missing.png \
	Stetic/Wrapper/pixmaps/notebook.png \
	Stetic/Wrapper/pixmaps/optionmenu.png \
	Stetic/Wrapper/pixmaps/progressbar.png \
	Stetic/Wrapper/pixmaps/radiobutton.png \
	Stetic/Wrapper/pixmaps/remove-check-label.png \
	Stetic/Wrapper/pixmaps/remove-menu.png \
	Stetic/Wrapper/pixmaps/scrolledwindow.png \
	Stetic/Wrapper/pixmaps/spinbutton.png \
	Stetic/Wrapper/pixmaps/statusbar.png \
	Stetic/Wrapper/pixmaps/table.png \
	Stetic/Wrapper/pixmaps/textview.png \
	Stetic/Wrapper/pixmaps/togglebutton.png \
	Stetic/Wrapper/pixmaps/toolbar.png \
	Stetic/Wrapper/pixmaps/treeview.png \
	Stetic/Wrapper/pixmaps/vbox.png \
	Stetic/Wrapper/pixmaps/vbuttonbox.png \
	Stetic/Wrapper/pixmaps/viewport.png \
	Stetic/Wrapper/pixmaps/vpaned.png \
	Stetic/Wrapper/pixmaps/vscale.png \
	Stetic/Wrapper/pixmaps/vscrollbar.png \
	Stetic/Wrapper/pixmaps/vseparator.png \
	Stetic/Wrapper/pixmaps/widget.png \
	Stetic/Wrapper/pixmaps/window.png \
	templates/ActionGroup.xft.xml \
	templates/ActionGroupPartial.xft.xml \
	templates/Dialog.xft.xml \
	templates/DialogPartial.xft.xml \
	templates/DrawingArea.xft.xml \
	templates/Widget.xft.xml \
	templates/WidgetPartial.xft.xml \
	templates/Window.xft.xml \
	templates/WindowPartial.xft.xml


EXTRA_DIST = $(FILES) $(RES)

update-stetic:
	svn rm -m "Update Stetic sources" svn+ssh://mono-cvs.ximian.com/source/trunk/monodevelop/main/src/addins/MonoDevelop.GtkCore/lib/stetic && \
	svn cp -m "Update Stetic sources" svn+ssh://mono-cvs.ximian.com/source/trunk/stetic svn+ssh://mono-cvs.ximian.com/source/trunk/monodevelop/main/src/addins/MonoDevelop.GtkCore/lib/stetic

all: $(ASSEMBLY)

$(ADDIN_BUILD)/%: $(srcdir)/lib/%
	mkdir -p $(ADDIN_BUILD)
	cp $< $@

$(ASSEMBLY): $(build_sources) $(build_resources) $(DEPS)
	mkdir -p $(ADDIN_BUILD)
	$(CSC) $(CSC_FLAGS) -debug -out:$@ -target:library \
	$(build_resources:%=/resource:%) $(build_sources) $(REFS) $(build_deps)

assemblydir = $(MD_ADDIN_DIR)/MonoDevelop.GtkCore2
assembly_DATA = $(ASSEMBLY) $(ASSEMBLY).mdb

CLEANFILES = $(ASSEMBLY) $(ASSEMBLY).mdb

include $(top_srcdir)/Makefile.include
